# sqlite-bindings

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  repos.txt  sqlite-ffi.c  sqliteFfi.ag  update.bat  update.sh  vcpkg.json
.github/workflows/: build.yml  release.yml
